# areuok-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.en.md  README.md  clippy.toml  docker-compose.yml  docker-entrypoint.sh  rustfmt.toml  start-docker.sh
.sqlx/: query-0473c1002e093820f2a49d5879ed74eafe5193c302438d7c9c239dfab204ba62.json  query-05f81e737c94a16ff938a9118e9037ca801af5c1bef40593d70c830390515e42.json  query-14e4fefd5ac864e464b7433ab93eb28ac70fbcf0e10dc66d71cfaf82201a5348.json  query-1e0e19e1a9b464f805511ae0a01726b559f898f3b63535e233f8eb25499ce42a.json  query-3162e6f360ae482dd743e8a3a10703b830941c04189ecaca85fd668bb8511186.json  query-3168c99bc93471750958b1f1269b4b707bc4a2846c57956658a9e5d75f2ebe79.json  query-320be6d85b23f4490d117796b16f07effb78eae189748e133b1e82b713d79f82.json  query-32ee446c58049dda09bd43b49be564c9da00ca8f273e06d8dd4e8c44ff443905.json  query-40f9346833bff443c61db89678db658c61c3fbd1a500a9a2286f0bbfa170e1ca.json  query-6589e7bd3dfca48568935ef61011b1458059dc095aa95ae0b1d34d7391f892dc.json  query-71ba79cdf46980d4d4b903eff6c760b01de599b23d98e7349344c15d5a5d0b6a.json  query-74c11e189454602391fd19bd4e55b6c4320575debe16b6b495e6523012558cec.json  query-79d70dacb3f5a0aa86911570ed6d5505d83ece6419e18cc55b10b377dc890d31.json  query-8b14403063dc673fb8ea35d92c76981b2956ac7548d8a14018d6a8b8f4c79607.json  query-b2073cc71fc80816ef0aa37110217decedc1dc8fa95fa39e027ea5c6e835d35a.json  query-b8ec79e5aac04e0398affd638da941f5a075b50c40a997b5595211b310465c38.json  (+9 more)
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  sse.rs
crates/api/src/handlers/: mod.rs  signin.rs  supervision.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: database-schema.md  lint-setup.md
test/: README.md  pyproject.toml  test_api.py
(+14 files in other folders)
